2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkpasswd-pbkdf2.c (main): Use /dev/urandom and not
	/dev/random. /dev/urandom is good enough for our purposes (salting).

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in (process_input_dir): Include efiemu??.o.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/legacy_parse.c (grub_legacy_parse): Correctly handle
	hexadecimal.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/main.c (grub_efiemu_load_file): Return grub_errno
	and not 0 on failure.

2011-05-03  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/fs/i386/pc/pxe.c (grub_pxefs_dir): Return
	GRUB_ERR_BAD_FS rather than GRUB_ERR_IO if the disk is not a pxe
	disk; otherwise grub_fs_probe will not fall back to the next
	filesystem.
	(grub_pxefs_open): Likewise, for consistency.
	Reported and tested by: Ezekiel Grave.

2011-05-03  Colin Watson  <cjwatson@ubuntu.com>

	* tests/partmap_test.in: Don't hardcode path to parted.
	Reported by: Peter Hjalmarsson.  Fixes Savannah bug #33150.

2011-05-01  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (GRUB only offers a rescue shell): Suggest the use
	of `ls' to find out which devices are available.

2011-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Supply target rather
	than source address for efi mmap buffer.

2011-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/amiga.c (amiga_partition_map_iterate): Fix a
	wrong action on non-detecting the magic.

2011-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/regex.c: Remove GRUB_MOD_LICENSE since it's
	already supplied by another part of the module (fixes compilation on
	FreeBSD).

2011-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Make mdraid UUID
	match the one used by mdadm.
